--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -6,6 +6,44 @@ header div.container.header {
   height: 110px;
 }
 
+#main-header {
+  background: #4a86cf;
+  width: 100%;
+  height: 70px;
+  padding-left: 275px;
+
+  .logo-header {
+    background-image: none;
+    display: block;
+    height: 100px;
+    left: 6px;
+    position: absolute;
+    top: 13px;
+    width: 265px;
+    z-index: 999;
+    overflow: hidden;
+  }
+
+  #nav-top {
+
+    #nav-left {
+      padding: 15px;
+
+      form#search {
+        padding: 7px;
+        margin-right: 7px;
+
+        input.content-search {
+          border-radius: 10px;
+          border: 1px solid #ccc;
+          height: 26px;
+          padding: 0 8px;
+        }
+      }
+    }
+  }
+}
+
 .products-showcase {
 
   .products-container {
@@ -398,7 +436,7 @@ table {
       font-weight: 300;
       color: black !important;
       font-size: 24px;
-      margin-bottom: 15px;      
+      margin-bottom: 15px;
     }
 
     h2 {
