--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -11,6 +11,7 @@ header div.container.header {
   width: 100%;
   height: 70px;
   padding-left: 275px;
+  position: relative;
 
   .logo-header {
     background-image: none;
@@ -18,7 +19,7 @@ header div.container.header {
     height: 100px;
     left: 6px;
     position: absolute;
-    top: 13px;
+    top: -10px;
     width: 265px;
     z-index: 999;
     overflow: hidden;
