--- a/application/modules/default/views/scripts/moderation/index.phtml
+++ b/application/modules/default/views/scripts/moderation/index.phtml
@@ -33,6 +33,7 @@
             </h1>
             </div>
             </div>
+
             <div class="row">
                 <div class="sidebar-left col-md-1"></div>
                 <div class="content col-md-9">
@@ -45,8 +46,8 @@
                     $this->rownum = (1 + (($this->page - 1) * 10));
                     $pageLimit = 10;
 
-                    $info = new Default_Model_Info();
-                    $candidateProducts = $info->getGhnsExcludedProjects();
+                    $m = new Default_Model_ProjectModeration();
+                    $candidateProducts = $m->getList();
           
 
                     $paginator = Zend_Paginator::factory($candidateProducts);
@@ -60,6 +61,16 @@
                     if ($paginator->count() == 0) {
                         echo '<div class="alert alert-success" role="alert"><p class="text-success">Congratulations. No more Ghns-excluded in sight. (For the moment)</p></div>';
                     }
+                    
+                    // header
+                    echo '<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><div class="col-lg-7"></div>'.
+                            '<div class="col-lg-1"> created at</div>'.
+                            '<div class="col-lg-1"> updated at</div>'.
+                            '<div class="col-lg-1"> excluded at</div>'.
+                            '<div class="col-lg-1">excluded by</div>'.
+                            '</div>';
+                                   
+                  
                     foreach ($this->products as $this->product) {                        
                         $updateTime = $helperPrintDate->printDate($this->product['project_changed_at']);
                         ?>
@@ -82,7 +93,7 @@
                                     </a>
                                 </figure>
                             </div>
-                            <div class="explore-product-details col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="explore-product-details col-lg-4 col-md-4 col-sm-4 col-xs-4">
                                 <h3>
                                     <?php
                                     $version = Default_Model_HtmlPurify::purify($this->product['version']);
@@ -96,18 +107,8 @@
                                 <b style="display: block; margin-bottom: 5px" class="small">by <a
                                             href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']) ?>"><?php echo $this->product['username'] ?></a></b>
                               
-
-                                <div class="productInfo">
-                                    <?php                             
-                                    $count_comments = $this->product['count_comments'];                         
-                                    echo ($count_comments > 0 ? '<span class="cntComments">' . $count_comments
-                                            . ' comment' : '') . ($count_comments > 1 ? 's' : '') . ($count_comments > 0
-                                            ? '</span>' : '');
-                                    ?>
-                                </div>
-                            </div>
-                            <div class="explore-product-plings col-lg-1">
                                 <!-- RATING -->
+                                <div style="width: 100px">
                                 <?php
                                 $this->widgetRating = new stdClass();
                                 $this->widgetRating->project_id = $this->product['project_id'];
@@ -118,14 +119,22 @@
                                 include APPLICATION_PATH . '/modules/default/views/scripts/partials/widgetRating.phtml';
                                 //echo $this->render('partials/widgetRating.phtml'); ?>
                                 <!-- /RATING -->
-
-                                <div class="collected">
+                                </div>
+                              
+                               
+                            </div>
+                            <div class="col-lg-1">
+                                    <span>  <?= $helperPrintDate->printDate($this->product['project_created_at']);?></span>
+                                </div>
+                              <div class="col-lg-1">
                                     <span><?php echo $updateTime ?></span>
                                 </div>
-
+                           
+                             <div class="col-lg-1">
+                                 <?= $helperPrintDate->printDate($this->product['created_at']);?>
                             </div>
-                            <div class="col-lg-2">
-                                 excluded by <?=$this->product['exclude_member_name']?> at <?= $helperPrintDate->printDate($this->product['project_changed_at']);?>
+                             <div class="col-lg-1">
+                                 <?=$this->product['exclude_member_name']?>
                             </div>
                         </div><!-- END .explore-product -->
                         
