--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -382,7 +382,7 @@ $this->inlineScript()->appendScript(
                             <th><?= $this->translate('Filename') ?></th>
                             <th><?= $this->translate('Version') ?></th>
                             <th><?= $this->translate('Description') ?></th>
-                          
+
                             <!--<th><?= $this->translate('License') ?></th>-->
                             <th><?= $this->translate('Filetype') ?></th>
                             <th><?= $this->translate('Packagetype') ?></th>
@@ -727,7 +727,7 @@ $this->inlineScript()->appendScript(
                             /**
                             + '<td>' + '<select id="data-select-tags' + this.id + '" data-license-id="" name="file_tags[]" class="form-control input-sm chosen" multiple="multiple" style="width: 150px;"><option value=""></option>' + tagOptions + '</select></td>'
                             **/
-                            /*   
+                            /*
                             + '<td>'
                             + '<select id="data-select-license' + this.id + '" data-license-id="" name="license" class="form-control input-sm">'
                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPLv2 or later</option><option value=\"18\">GPLv2 only</option><option value=\"19\">GPLv3</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
@@ -750,7 +750,7 @@ $this->inlineScript()->appendScript(
                                 ?>
                             + '</select>'
                             + '</td>'
-                            
+
                             + '<td>'
                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                             + '    <option value=""></option>'
@@ -766,7 +766,7 @@ $this->inlineScript()->appendScript(
                                 ?>
                             + '</select>'
                             + '</td>'
-                            
+
                             + '<td>' + this.created_timestamp + '</td>'
                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                             + '<td style="text-align: right">' + numDownloads + '</td>'
@@ -790,13 +790,13 @@ $this->inlineScript()->appendScript(
                         if(this.active == '0') {
                             $packagetypeSelect.prop('disabled', 'disabled');
                         }
-                        
-                        
+
+
                         $architectureSelect = $modalPpload.find('#data-select-architecture' + this.id);
                         if(this.active == '0') {
                             $architectureSelect.prop('disabled', 'disabled');
                         }
-                        
+
                         if ((typeof link != 'undefined') && (link != "")) {
                             //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
                             $("#data-link" + this.id).attr('target','_blank');
@@ -923,9 +923,14 @@ $this->inlineScript()->appendScript(
                     $('a[href="#modal-ppload"][data-product-id="' + $modalPpload.attr('data-product-id') + '"]')
                         .attr('data-ppload-collection-id', data.file.collection_id);
                     $modalPpload.attr('data-ppload-collection-id', data.file.collection_id);
+
+                    var versionText;
+                    if(data.file.version==null) {versionText = '';} else{versionText = data.file.version;}
+                    versionText = versionText.replace(/<\/?[^>]+(>|$)/g, "");
+
                     var version = '<input data-ppload-file-version="" class="form-control input-sm"'
                         + ' type="text" maxlength="140" placeholder="File version"'
-                        + ' value="">';
+                        + ' value="' + versionText + '">';
 
                     var fileDescription = '';
                     if (data.file.description) {
@@ -1055,8 +1060,8 @@ $this->inlineScript()->appendScript(
                 }
             });
         }
-        
-        function updateArchitecture(fileId, architectureId) { 
+
+        function updateArchitecture(fileId, architectureId) {
             $.ajax({
                 url: $modalPpload.attr('data-updatearchitecture-uri'),
                 type: 'POST',
@@ -1492,7 +1497,7 @@ $this->inlineScript()->appendScript(
             $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
             updatePackageType(fileId, packagetypeId);
         });
-        
+
         $modalPpload.on('change', 'select[id*=data-select-architecture]', function(event) {
             event.preventDefault();
             var fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
@@ -1607,9 +1612,9 @@ $this->inlineScript()->appendScript(
 
 <?php
             $this->inlineScript()->appendScript(
-                '    $(document).ready(function(){       
-                        TagingLoopMyProducts.setup();            
+                '    $(document).ready(function(){
+                        TagingLoopMyProducts.setup();
                     });
                 ');
-                            
+
      ?>
