--- a/application/modules/default/views/scripts/moderation/index.phtml
+++ b/application/modules/default/views/scripts/moderation/index.phtml
@@ -63,11 +63,11 @@
                     }
                     
                     // header
-                    echo '<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><div class="col-lg-7"></div>'.
+                    echo '<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><div class="col-lg-6"></div>'.
                             '<div class="col-lg-1"> created at</div>'.
                             '<div class="col-lg-1"> updated at</div>'.
                             '<div class="col-lg-1"> excluded at</div>'.
-                            '<div class="col-lg-1">excluded by</div>'.
+                            '<div class="col-lg-3">excluded by</div>'.
                             '</div>';
                                    
                   
@@ -93,14 +93,13 @@
                                     </a>
                                 </figure>
                             </div>
-                            <div class="explore-product-details col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <div class="explore-product-details col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                 <h3>
                                     <?php
                                     $version = Default_Model_HtmlPurify::purify($this->product['version']);
                                     ?>
                                     <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product['project_id'],
-                                        ''); ?>"><?php echo $this->product['title']; ?> <span
-                                                style="font-size: smaller; padding-left: 20px"><?php echo $version ?> </span></a>
+                                        ''); ?>"><?php echo $this->product['title']; ?> <span style="font-size: smaller; padding-left: 20px"><?php echo $version ?> </span></a>
                                 </h3>
 
                                 <b style="display: block; margin-bottom: 5px"><?php echo $this->product['cat_title'] ?></b>
@@ -133,8 +132,10 @@
                              <div class="col-lg-1">
                                  <?= $helperPrintDate->printDate($this->product['created_at']);?>
                             </div>
-                             <div class="col-lg-1">
+                             <div class="col-lg-3">
                                  <?=$this->product['exclude_member_name']?>
+                                 <br>
+                                 <?=$this->product['note']?>
                             </div>
                         </div><!-- END .explore-product -->
                         
